[fix] | fixes board alignment of board components | Paulami/Sandip.

--- a/public/pages/game-page/styles/theme.css
+++ b/public/pages/game-page/styles/theme.css
@@ -22,6 +22,7 @@
   --error: #eb5757;
   --font-primary: "Inter", sans-serif;
   --font-heading: "Cinzel", serif;
+  --tile-color: #94744E;
 
   --border-primary: #666;
 }
